--- a/slides-2022/block_1_session_1.html
+++ b/slides-2022/block_1_session_1.html
@@ -324,21 +324,114 @@
   <p class="author">Matt Bannert (<span class="citation" data-cites="whatsgoodio">@whatsgoodio</span>)</p>
 </section>
 
-<section id="hi-im-matt." class="slide level2">
+<section id="hi-im-matt." class="slide level2 center">
 <h2>Hi, I’m Matt.</h2>
 
 <img data-src="img/matt.jpeg" class="r-stretch"></section>
-<section id="james-bond-start" class="slide level2">
+<section id="james-bond-start" class="slide level2 center">
 <h2>James Bond Start</h2>
 
+<img data-src="img/bond.gif" class="r-stretch"></section>
+<section id="markdown-quarto" class="slide level2 center">
+<h2>Markdown / Quarto</h2>
+</section>
+<section id="git-version-control" class="slide level2 center">
+<h2>git version control</h2>
+</section>
+<section id="swissdata-1.0" class="slide level2 center">
+<h2>Swissdata 1.0</h2>
+</section>
+<section id="background-survey" class="slide level2 center">
+<h2><a href="https://graphs.kof.ethz.ch/h4sci-survey/">Background Survey</a></h2>
+</section>
+<section>
+<section id="overall-course-outline" class="title-slide slide level1 center">
+<h1>Overall Course Outline</h1>
+
+</section>
+<section id="talk-talk-talk" class="slide level2">
+<h2>Talk, Talk, Talk</h2>
+
+<img data-src="img/talk.gif" class="r-stretch"></section>
+<section id="coaching" class="slide level2">
+<h2>Coaching</h2>
+
+<img data-src="img/klopp.gif" class="r-stretch"></section>
+<section id="schedule-block-1" class="slide level2 center">
+<h2>Schedule: Block 1</h2>
+<p>29.09. 10-13 The Big Picture</p>
+<p>30.9. 10-14 Git &amp; Workflows</p>
+</section>
+<section id="schedule-block-2" class="slide level2 center">
+<h2>Schedule: Block 2</h2>
+<p>20.10. 10-13 R Programming Crash Course</p>
+<p>21.10. 10-14 Programming with Data</p>
+</section>
+<section id="schedule-block-3" class="slide level2 center">
+<h2>Schedule: Block 3</h2>
+<p>17.11. 10-13 Infrastructure</p>
+<p>18.11. 10-14 Infrastructure</p>
+</section>
+<section id="schedule-block-4" class="slide level2 center">
+<h2>Schedule: Block 4</h2>
+<p>01.12. 10-13 Semester Projects</p>
+<p>02.12. 10-14 Semester Projects</p>
+</section></section>
+<section>
+<section id="course-resources" class="title-slide slide level1 center">
+<h1>Course Resources</h1>
+
+</section>
+<section id="read-online" class="slide level2">
+<h2>Read Online</h2>
+<ul>
+<li><a href="https://h4sci.github.io/h4sci-course">h4sci Slides</a></li>
+<li><a href="https://h4sci.github.io/h4sci-book">DevOps Carpentry free Online Book</a></li>
+<li><a href="https://github.com/h4sci/h4sci-tasks">Tasks &amp; Exercises</a></li>
+</ul>
+</section>
+<section id="source" class="slide level2">
+<h2>Source</h2>
+<ul>
+<li><a href="https://github.com/h4sci/h4sci-course">Slides: https://github.com/h4sci/h4sci-course</a></li>
+<li><a href="https://github.com/devops-carpentry/book">Book: https://github.com/devops-carpentry/book</a></li>
+</ul>
+</section>
+<section id="community" class="slide level2">
+<h2>Community</h2>
+<ul>
+<li><a href="https://teaching.kof.ethz.ch/auth-sign-in">R Studio Server</a> (only available to enrolled ETH students during semester)</li>
+<li><a href="https://h4sci.slack.com/">Slack Workspace</a> (invite only)</li>
+<li>Zoom Live Sessions (only available to ETH students)</li>
+</ul>
+</section></section>
+<section>
+<section id="course-objectives" class="title-slide slide level1 center">
+<h1>Course Objectives</h1>
+
+</section>
+<section id="evaluate-the-role-of-components-in-the-tech-stack" class="slide level2 center">
+<h2>1. Evaluate the Role of Components in the Tech Stack</h2>
+</section>
+<section id="carpentry-level-version-control-dev-workflows" class="slide level2 center">
+<h2>2. Carpentry Level Version Control + Dev Workflows</h2>
+</section>
+<section id="applied-data-handling-w-programming-language" class="slide level2 center">
+<h2>3. Applied Data Handling /w Programming Language</h2>
+</section>
+<section id="example-benchmark-create-a-production-pipeline" class="slide level2 center">
+<h2>Example Benchmark: Create a Production Pipeline</h2>
+</section>
+<section id="invidual-introduction" class="slide level2 center">
+<h2>Invidual Introduction</h2>
 <!--
 recordings from 2021: https://ethz.zoom.us/recording/detail?meeting_id=ZdBWsHpgRk6urwzsBpZKOg%3D%3D
 
  -->
-<img src="img/bond.gif" class="r-stretch"><div class="footer footer-default">
+<div class="footer footer-default">
 
 </div>
-</section>
+</section></section>
     </div>
   </div>
 
